Fixed alignment issue with narrow images

--- a/slices/blog/Image/styles.module.scss
+++ b/slices/blog/Image/styles.module.scss
@@ -1,7 +1,10 @@
 @use "../../../sass/abstracts/" as *;
 
 .container {
-  margin: 3rem 0;
+  margin: 3rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   & img {
     border-radius: 5px;
